[gd_scene load_steps=12 format=2]

[ext_resource path="res://gui/interactables/workbench_ui.gd" type="Script" id=1]
[ext_resource path="res://gui/themes/base_theme.tres" type="Theme" id=4]
[ext_resource path="res://interactables/workbench/item_specs.gd" type="Script" id=5]
[ext_resource path="res://gui/InventoryUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/interactables/wb_commands.gd" type="Script" id=9]
[ext_resource path="res://gui/interactables/spec.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/info:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "typewriting"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/info:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.392157 )

[node name="workbench_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 50.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Components" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -811.0
margin_top = 21.0
margin_right = -501.0
margin_bottom = 321.0
exclude = "build"

[node name="VBoxContainer" parent="Components" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 308.0
margin_bottom = 298.0

[node name="Label" parent="Components/VBoxContainer" index="0"]
margin_right = 306.0

[node name="ItemContainer" parent="Components/VBoxContainer" index="1"]
margin_right = 306.0
margin_bottom = 296.0

[node name="Builds" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -72.0
margin_right = 152.0
margin_bottom = 72.0
rect_min_size = Vector2( 250, 140 )
size_flags_horizontal = 4
exclusive_for = "build"

[node name="VBoxContainer" parent="Builds" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 302.0
margin_bottom = 142.0
alignment = 1

[node name="Label" parent="Builds/VBoxContainer" index="0"]
text = "/PC Builds"

[node name="new_build" type="Button" parent="Builds/VBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 55.0
margin_top = 34.0
margin_right = 245.0
margin_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 190, 25 )
size_flags_horizontal = 4
text = "Create New Build +"
icon_align = 1

[node name="ItemContainer" parent="Builds/VBoxContainer" index="2"]
margin_top = 63.0
margin_bottom = 136.0
rect_min_size = Vector2( 300, 73 )

[node name="ScrollContainer" parent="Builds/VBoxContainer/ItemContainer" index="0"]
margin_right = 2.10001
margin_bottom = 69.703

[node name="button_list" parent="Builds/VBoxContainer/ItemContainer/ScrollContainer" index="0"]
margin_right = 302.1
margin_bottom = 142.703
rect_min_size = Vector2( 0, 70 )

[node name="show_more" type="Button" parent="Builds/VBoxContainer" index="3"]
unique_name_in_owner = true
visible = false
margin_left = 50.0
margin_top = 111.0
margin_right = 250.0
margin_bottom = 132.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
text = "show more"

[node name="Control" type="Control" parent="Builds/VBoxContainer" index="4"]
margin_top = 140.0
margin_right = 300.0
margin_bottom = 140.0

[node name="InstalledParts" type="PanelContainer" parent="."]
unique_name_in_owner = true
margin_left = 34.0
margin_top = 158.0
margin_right = 389.0
margin_bottom = 438.0
grow_horizontal = 2
rect_min_size = Vector2( 355, 280 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts"]
margin_left = 2.0
margin_top = 2.0
margin_right = 353.0
margin_bottom = 278.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer"]
margin_right = 351.0
margin_bottom = 30.0
grow_vertical = 2
rect_min_size = Vector2( 0, 30 )
text = "Installed Parts"
align = 1
valign = 1

[node name="specs" type="VBoxContainer" parent="InstalledParts/VBoxContainer"]
unique_name_in_owner = true
margin_top = 35.0
margin_right = 350.0
margin_bottom = 269.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 6
alignment = 1

[node name="case" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/case"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "Case"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/case"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/case/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/case/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="psu" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_top = 34.0
margin_right = 350.0
margin_bottom = 64.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/psu"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "PSU"
valign = 1
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/psu"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/psu/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/psu/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="motherboard" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_top = 68.0
margin_right = 350.0
margin_bottom = 98.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/motherboard"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "Mobo"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/motherboard"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/motherboard/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/motherboard/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="cpu" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_top = 102.0
margin_right = 350.0
margin_bottom = 132.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/cpu"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "CPU"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/cpu"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/cpu/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/cpu/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="cooler" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_top = 136.0
margin_right = 350.0
margin_bottom = 166.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/cooler"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "Cooler"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/cooler"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/cooler/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/cooler/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="memory" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_top = 170.0
margin_right = 350.0
margin_bottom = 200.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/memory"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "Memory"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/memory"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/memory/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/memory/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="storage" type="HBoxContainer" parent="InstalledParts/VBoxContainer/specs"]
margin_top = 204.0
margin_right = 350.0
margin_bottom = 234.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Label" type="Label" parent="InstalledParts/VBoxContainer/specs/storage"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 0.588235 )
custom_styles/normal = SubResource( 5 )
text = "Storage"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InstalledParts/VBoxContainer/specs/storage"]
margin_left = 70.0
margin_right = 350.0
margin_bottom = 30.0

[node name="spec" parent="InstalledParts/VBoxContainer/specs/storage/VBoxContainer" instance=ExtResource( 12 )]

[node name="uninstall" parent="InstalledParts/VBoxContainer/specs/storage/VBoxContainer/spec/Buttons" index="0"]
visible = true

[node name="Specs" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -202.0
margin_right = -21.0
margin_bottom = -143.0
rect_min_size = Vector2( 210, 0 )
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Specs"]
margin_left = 2.0
margin_top = 2.0
margin_right = 208.0
margin_bottom = 57.0
custom_constants/separation = 5

[node name="header" type="Label" parent="Specs/VBoxContainer"]
unique_name_in_owner = true
margin_right = 206.0
margin_bottom = 30.0
grow_vertical = 2
rect_min_size = Vector2( 0, 30 )
text = "Specs"
align = 1
valign = 1

[node name="info" type="RichTextLabel" parent="Specs/VBoxContainer"]
unique_name_in_owner = true
margin_left = 3.0
margin_top = 35.0
margin_right = 203.0
margin_bottom = 55.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
fit_content_height = true
scroll_active = false
scroll_following = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Specs"]
anims/RESET = SubResource( 6 )
anims/typewriting = SubResource( 7 )

[node name="Commands" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -139.219
margin_top = -97.0
margin_right = 136.781
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="Commands"]
margin_right = 276.0
margin_bottom = 97.0
custom_constants/separation = 5

[node name="component_name" type="Label" parent="Commands/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 138.0
margin_right = 138.0
margin_bottom = 22.0
grow_horizontal = 2
size_flags_horizontal = 4
custom_styles/normal = SubResource( 4 )
align = 1
valign = 1

[node name="CommandBar" type="HBoxContainer" parent="Commands/VBoxContainer"]
unique_name_in_owner = true
margin_right = 276.0
margin_bottom = 66.0
custom_constants/separation = 10
alignment = 1

[node name="on_off" type="Button" parent="Commands/VBoxContainer/CommandBar" groups=["case"]]
unique_name_in_owner = true
margin_left = 29.0
margin_right = 95.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
hint_tooltip = "ON/OFF"
toggle_mode = true
text = "on/off"
icon_align = 1

[node name="reset" type="Button" parent="Commands/VBoxContainer/CommandBar" groups=["case"]]
margin_left = 105.0
margin_right = 171.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
hint_tooltip = "RESET"
text = "reset"
icon_align = 1

[node name="thermal_paste" type="Button" parent="Commands/VBoxContainer/CommandBar" groups=["cpu"]]
margin_left = 181.0
margin_right = 247.0
margin_bottom = 66.0
rect_min_size = Vector2( 66, 66 )
hint_tooltip = "APPLY THERMAL PASTE"
text = "thermal"
icon_align = 1

[node name="notification" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_right = 150.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 40 )
align = 1
valign = 1

[connection signal="visibility_changed" from="." to="." method="_on_workbench_ui_visibility_changed"]
[connection signal="item_button_pressed" from="Components" to="." method="_on_Components_item_button_pressed"]
[connection signal="item_button_pressed" from="Builds" to="." method="_on_Builds_item_button_pressed"]
[connection signal="pressed" from="Builds/VBoxContainer/new_build" to="." method="_on_new_build_pressed"]
[connection signal="toggled" from="Commands/VBoxContainer/CommandBar/on_off" to="Commands" method="_on_on_off_toggled"]
[connection signal="pressed" from="Commands/VBoxContainer/CommandBar/reset" to="Commands" method="_on_reset_pressed"]
[connection signal="pressed" from="Commands/VBoxContainer/CommandBar/thermal_paste" to="Commands" method="_on_thermal_paste_pressed"]

[editable path="Components"]
[editable path="Builds"]
[editable path="Builds/VBoxContainer/ItemContainer"]
[editable path="InstalledParts/VBoxContainer/specs/case/VBoxContainer/spec"]
[editable path="InstalledParts/VBoxContainer/specs/psu/VBoxContainer/spec"]
[editable path="InstalledParts/VBoxContainer/specs/motherboard/VBoxContainer/spec"]
[editable path="InstalledParts/VBoxContainer/specs/cpu/VBoxContainer/spec"]
[editable path="InstalledParts/VBoxContainer/specs/cooler/VBoxContainer/spec"]
[editable path="InstalledParts/VBoxContainer/specs/memory/VBoxContainer/spec"]
[editable path="InstalledParts/VBoxContainer/specs/storage/VBoxContainer/spec"]
